--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
   font-family: 'Roboto', sans-serif;
 }
 
-body {
-  background: white;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
