Adding products.Finishing NavBar+slider

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,46 +1,42 @@
-/* NavBar (1285-1600) */ 
-
-
+/* NavBar */
 .navbar {
   padding-left: 145px;
   padding-right: 250px;
-  height: 100px;
+  height: 80px;
   background-color: rgba(255, 203, 203, 0.7); /* Initial background color */
-  border-radius: 20% 50% 50% 20%;
-  transition: background-color 0.3s ease; /* Transition effect for the background color */
+  border-radius: 0px 100px / 100px;
+  transition: background-color 0.3s ease, opacity 0.3s ease; /* Include both transitions */
+  
 }
 
 .navbar.scrolled {
-  background-color: rgba(255, 203, 203, 1); /* Background color when scrolled */
+  background-color: rgba(255, 203, 203, 1);
 }
 
-  
-  /* MenuList items edit */
-  .menuList {
-    color: white;
-    font-size: 24px;
-    cursor: pointer;
-    font-weight: 500;
-    
-  }
-  
-  .menuList:hover {
-    color: white;
-    text-decoration: underline;
-  }
-  
-  /*  Each element from menuList besides the HOME */
+.navbar.isNotVisible {
+  opacity: 0;
+}
 
-  .menuList + .menuList {
-    margin-left: 36px;
-  }
+/* MenuList items edit */
+.menuList {
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  font-weight: 500;
+}
 
+.menuList:hover {
+  color: white;
+  text-decoration: underline;
+}
 
-  /* logo */
+/* Each element from menuList besides the HOME */
+.menuList + .menuList {
+  margin-left: 36px;
+}
 
-  .logo {
-
-     width: 263px;
-      height: 89px; 
-  }
-  
+/* logo */
+.logo {
+  width: 200px;
+  height: 70px;
+}
