--- a/src/containers/AboutUs/AboutUs.css
+++ b/src/containers/AboutUs/AboutUs.css
@@ -1,31 +1,28 @@
 
-  .grid-container {
-    padding-top: 143px;
-    padding-left: 145px;
-    padding-right: 200px;
-    margin-bottom: 100px;
-    height: 100vh; 
-    display: grid;
-    grid-template-areas:
+.grid-container {
+  padding-left: 145px;
+  padding-right: 200px;
+  /* Remove padding-top, height, and display properties */
+  display: grid;
+  grid-template-areas:
     'h1 p'
     'slider slider';
-    grid-template-rows: auto 1fr; /* Two rows: top row and bottom row */
-    grid-template-columns: 1fr 2fr; /* Two columns */
-    
-  }
+  grid-template-rows: auto 1fr; /* Two rows: top row and bottom row */
+  grid-template-columns: 1fr 2fr; /* Two columns */
+}
+
   .h__aboutus{
     grid-area: h1;
     font-size: 48px;
     font-weight: 500;
     text-shadow: 0.4px 0.6px 3px #040000;
-    
-   
   }
 
   .p__aboutus{
     grid-area: p;
     font-size: 20;
     font-weight: 400;
+    padding-top: 20px;
   
   }
   
