--- a/src/components/PhotoCollage/PhotoCollage.css
+++ b/src/components/PhotoCollage/PhotoCollage.css
@@ -1,21 +1,19 @@
 .collage-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; /* Distribute items evenly with equal space between them */
-    background-color: black;
-    padding: 5px;
-  }
-  
-  .collage-item {
-    flex: 1 0 calc(33.33% - 10px); /* Allow items to grow and shrink, with a calculated width for equal spacing */
-    margin: 5px; /* Add margin on all sides of each item to create equal spacing */
-    overflow: hidden; /* Hide any content that overflows the item container */
-  }
-  
-  .collage-image {
-    width: 100%;
-    height: 100%; /* Set the height to 100% to fill the entire item container */
-    object-fit: cover; /* Maintain aspect ratio and crop images to fit within the item */
-   
-  }
-  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start; /* Start items from the left to create two rows */
+  background-color: black;
+  padding: 5px;
+}
+
+.collage-item {
+  flex: 1 0 calc(25% - 10px); /* Four items per row; allow items to grow and shrink, with a calculated width for equal spacing */
+  margin: 5px; /* Add margin on all sides of each item to create equal spacing */
+  overflow: hidden; /* Hide any content that overflows the item container */
+}
+
+.collage-image {
+  width: 100%;
+  height: 100%; /* Set the height to 100% to fill the entire item container */
+  /* Maintain aspect ratio and crop images to fit within the item */
+}
