--- a/src/containers/Products/Products.css
+++ b/src/containers/Products/Products.css
@@ -1,7 +1,6 @@
 .products-container {
   padding-left: 145px;
-  padding-right: 100px;
-  /* Remove padding-top, height, and display properties */
+  padding-right: 200px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -60,24 +59,28 @@
   
   .about-product {
     display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+    justify-content: space-between; 
+    width: 100%;
+
   }
   
   .menu-item {
     border: 1px solid #eee;
     padding: 10px;
-    text-align: center;
+    text-align: left;
+    margin-right: 70px;
+    flex: 1.5;
   }
+  
   
   .menu-item h3 {
     margin-top: 0;
   }
   
   .contact-us {
-    width: 100%;
-    
     border: 1px solid #eee;
+    flex: 1; 
+  
   }
   
   .image-list {
@@ -89,4 +92,12 @@
   justify-content: center;
   padding: 5px;
 
+  }
+
+  .space{
+   
+    border-bottom: 2px solid #c2c2c2;
+    
+    width: var(--line-width);
+    margin: 20px 0;
   }
