--- a/src/containers/Products/Products.css
+++ b/src/containers/Products/Products.css
@@ -1,6 +1,4 @@
-.products-container {
-  padding-left: 145px;
-  padding-right: 200px;
+.products__grid-container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -8,12 +6,8 @@
   gap: 20px;
 }
   
-  .heading {
-    font-size: 48px;
-    font-weight: 500;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    text-shadow: 0.4px 0.6px 3px #040000;
+  .heading-1 {
+    padding-bottom: 40px;
   }
   
   .row-tabs1, .row-tabs2 {
@@ -22,17 +16,7 @@
     flex-wrap: wrap;
    
   }
-  .row2__rounded-button{
-    border: none;
-    background-color: #eee;
-    border: 1px solid var(--monochrome-black, #212121);
-    padding: 10px 40px;
-    cursor: pointer;
-    font-size: 16px;
-    border-radius: 20px;
 
-  }
-  
   .rounded-button {
     border: none;
     background-color: #eee;
@@ -40,18 +24,18 @@
     padding: 10px 40px;
     cursor: pointer;
     font-size: 16px;
-    border-radius: 20px;
+    border-radius: 30px;
   }
   
-  .rounded-button.active {
-    border-radius: 64px;
+  .row1__rounded-button.active {
+    border-radius: 30px;
     color: #ffffff;
     background: #4363D6;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.25);
   } 
 
   .row2__rounded-button.active {
-    border-radius: 64px;
+    border-radius: 30px;
     color: #ffffff;
     background: #a8a8a8;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.25);
