--- a/src/containers/Products/Products.css
+++ b/src/containers/Products/Products.css
@@ -61,12 +61,7 @@
     margin-top: 0;
   }
   
-  .contact-us {
-    border: 1px solid #eee;
-    flex: 1; 
-  
-  }
-  
+
   .image-list {
   height: auto;
   width: 100%;
@@ -84,4 +79,19 @@
     
     width: var(--line-width);
     margin: 20px 0;
+  }
+
+  /* Center the contact-us section */
+  .container-contact-us {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
+
+  .btn__contact{
+    background-color: #4363D6;
+    border-radius: 30px;
+    color: white;
+    padding: 5px 20px ;
   }
