--- a/src/containers/Products/Products.css
+++ b/src/containers/Products/Products.css
@@ -3,24 +3,27 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  gap: 20px;
+  gap: 10px;
 }
   
   .heading-1 {
     padding-bottom: 40px;
   }
   
-  .row-tabs1, .row-tabs2 {
+  .row-tabs1,
+  .row-tabs2 {
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
-   
+    justify-content: center; 
+    align-items: center;
   }
+  
 
   .rounded-button {
     border: none;
     background-color: #eee;
-    border: 1px solid var(--monochrome-black, #212121);
+    border: 3px solid var(--monochrome-black, #212121);
     padding: 10px 40px;
     cursor: pointer;
     font-size: 16px;
@@ -45,43 +48,42 @@
     display: flex;
     justify-content: space-between; 
     width: 100%;
+    margin: 1% 0 ;
 
   }
   
   .menu-item {
-    border: 1px solid #eee;
-    padding: 10px;
+    padding:  10px 10px 10px 0;
     text-align: left;
     margin-right: 70px;
     flex: 1.5;
   }
   
-  
-  .menu-item h3 {
-    margin-top: 0;
+  .menu-item h2 {
+    padding-bottom: 10px;
+    margin-left: 0;
   }
-  
 
   .image-list {
   height: auto;
   width: 100%;
-  background-color: black;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding: 5px;
+  background-color: black;
+
 
   }
 
   .space{
    
     border-bottom: 2px solid #c2c2c2;
-    
     width: var(--line-width);
     margin: 20px 0;
   }
 
-  /* Center the contact-us section */
+
   .container-contact-us {
     display: flex;
     flex-direction: column;
