--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -5,7 +5,8 @@
   height: 80px;
   background-color: rgba(255, 203, 203, 0.7); 
   border-radius: 0 0 50px 50px;
-  transition: background-color 0.3s ease, opacity 0.3s ease; /* Include both transitions */
+  transition: background-color 0.3s ease, opacity 0.3s ease; 
+
   
 }
 
@@ -13,6 +14,9 @@
   background-color: rgba(255, 203, 203, 1);
 }
 
+.navbar.hidden {
+  opacity: 0;
+}
 
 
 /* MenuList items edit */
