--- a/src/components/PhotoCollage/PhotoCollage.css
+++ b/src/components/PhotoCollage/PhotoCollage.css
@@ -12,6 +12,7 @@
   overflow: hidden;
   position: relative; 
   max-height: 220px; /* Limit the maximum height of each item */
+  transition: opacity 0.3s ease, transform 0.3s ease;
   
 
 }
@@ -20,4 +21,60 @@
   width: 100%;
   height: 100%;
   object-fit: cover; /* Maintain aspect ratio and crop images to fit within the item container */
+  cursor: pointer;
+
+}
+
+
+/* Creating modal for images*/
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.modal {
+  background-color: whitesmoke;
+  border: 2px black solid;
+  padding: 20px;
+  max-width: 80%;
+  max-height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  position: relative;
+}
+
+.selected-photo {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.close-button {
+  font-size: 20px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  color: #333;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  position: absolute;
+  top: -35px;
+  right: -35px;
+  background-color: rgba(255, 255, 255, 0.8); 
 }
