--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,20 @@
 
 :root {
   font-family: 'Roboto', sans-serif;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  
 }
 
+
 .container {
-  padding-left: 7%; 
+  padding-left: 6%; 
   padding-right: 7%; 
   margin-bottom: 110px;
 }
-
 
 .heading-1{
 
@@ -23,6 +29,7 @@
   text-shadow: 0.4px 0.6px 3px #040000;
 
 }
+
 .heading-2{
   font-size: 20px;
   font-weight: 500;
@@ -35,3 +42,4 @@
   margin: 0;
   scroll-behavior: smooth;
 }
+
