--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -12,7 +12,7 @@
   justify-content: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: rgba(255, 203, 203, 1);
+  background-image: linear-gradient(to top,#ee9ca7, #ffdde1);
   border-radius: 0 0 50% 50%;
 }
 
