--- a/src/index.css
+++ b/src/index.css
@@ -19,14 +19,13 @@
 .container {
   padding-left: 6%; 
   padding-right: 7%; 
-  margin-bottom: 110px;
+  padding-bottom: 110px;
 }
 
 .heading-1{
 
   font-size: 48px;
   font-weight: 500;
-  text-shadow: 0.4px 0.6px 3px #040000;
 
 }
 
@@ -36,10 +35,17 @@
   
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+
+*{
   scroll-behavior: smooth;
 }
 
+
+@media only screen and (max-width: 718px) {
+  .heading-1{
+
+    font-size: 36px;
+    font-weight: 500;
+  
+  }
+}
