--- a/src/containers/AboutUs/AboutUs.css
+++ b/src/containers/AboutUs/AboutUs.css
@@ -5,8 +5,8 @@
   grid-template-areas:
     'h1 p'
     'slider slider';
-  grid-template-rows: auto 1fr; /* Two rows: top row and bottom row */
-  grid-template-columns: 1fr 2fr; /* Two columns */
+  grid-template-rows: auto 1fr; 
+  grid-template-columns: 1fr 2fr; 
 }
 
   .heading-1{
@@ -38,8 +38,6 @@
       'slider';
     grid-template-rows: auto auto auto; /* Three rows with equal height */
     grid-template-columns: 1fr;
-
-    margin-left: 7%;
   }
   
 }
@@ -53,20 +51,6 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
-
-  .aboutus__grid-container {
-
-    margin-left: 5%;
-  }
-}
 
 
 
-@media only screen and (max-width: 678px) {
-
-  .aboutus__grid-container {
-
-    margin-left: 0;
-  }
-}
