--- a/src/containers/Products/Products.css
+++ b/src/containers/Products/Products.css
@@ -98,25 +98,25 @@
     padding: 5px 20px ;
   }
 
-  @media only screen and (max-width: 1025px) {
+  @media only screen and (max-width: 768px) {
+
+    .about-product {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; 
+      width: 100%;  
+    }
+
+    .menu-item{
+      margin-right: 0;
+    }
 
     .products__grid-container {
-     
-  
-      margin-left: 5%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
     }
-    
-  }
-  
-  
-  @media only screen and (max-width: 900px) {
-  
-    .products__grid-container {
-  
-      margin-left: 0;
-    }
-  }
-
-  @media only screen and (max-width: 1024px) and (min-width: 914px) {
 
   }
