--- a/src/components/PhotoCollage/PhotoCollage.css
+++ b/src/components/PhotoCollage/PhotoCollage.css
@@ -79,9 +79,13 @@
   background-color: rgba(255, 255, 255, 0.8); 
 }
 
+@media only screen and (max-width: 490px) {
+  .collage-item {
+    margin: 3px;
+  }
 
-@media only screen and (max-width: 768px) {
-
-
-
+  .collage-container {
+    padding: 3px;
+  
+  }
 }
