--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -1,16 +1,20 @@
-/* Updated CSS */
 .header {
-  background-size: cover;
-  background-position: center;
-  min-height: calc(100vh);
-  filter: contrast(200%);
-}
+  min-height: calc(100vh);}
 
 .header__container {
   display: flex;
-  height: 100vh;
   margin-bottom: 110px;
   
+}
+
+.dark-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1); 
+  z-index: -1; 
 }
 
 .p__mission {
@@ -43,12 +47,13 @@
 
 
 
-  @media only screen and (max-width: 900px) {
+  @media only screen and (max-width: 1100px) {
     .header__container {
       display: flex;
       flex-direction: column-reverse;
       align-items: center;
       justify-content: center;
+      margin-bottom: 0;
      
     }
     
@@ -65,24 +70,58 @@
     }
     
     .header__check--button {
-      margin-top: 250px;
+      margin-top: 35%;
       font-size: 54px;
       padding-right: 0;
     }
 
+    
+  }
+  
+
+  @media only screen and (max-width: 1051px) {
+    .header__check--button {
+      margin-top: 30%;
+    }
     .header{
-      min-height: calc(80vh);
+      min-height: 80vh;
     }
     
   }
+
+  @media only screen and (max-width: 720px) {
+    .header__check--button {
+      margin-top: 40%;
+    }
+  }
+
   
   @media only screen and (max-width: 600px) {
 
     .p__mission {
       width: auto;
       height: auto;
-      padding: 0 5%;
+      padding: 0 8%;
     }
+  }
+
+
+  @media only screen and (max-width: 541px) {
+
+    .header__check--button {
+      margin-top: 50%;
+  }
+  }
+
+
+  
+  @media only screen and (max-width: 542px) and (min-width: 539px)  {
+
+    .header__check--button{
+      margin-top: 60%;
+
+    }
+
   }
 
 
@@ -95,10 +134,19 @@
       margin-left: 0;
     }
     .header__check--button{
-      margin-top: 50%;
-      font-size: 36px;
+     
+      font-size: 14px;
       margin-bottom: 12%;
-      
+      margin-top: 65%;
+    }
+  
+  }
+
+  @media only screen and (max-width: 470px) and (min-width: 400px)  {
+
+    .header__check--button{
+ 
+      margin-top: 50%;
     }
 
   }
@@ -106,8 +154,13 @@
   @media only screen and (max-width: 400px) {
     .header__check--button{
       margin-bottom: 0;
-      margin-top: 60%;
-
     }
   }
 
+  @media only screen and (max-width: 282px) {
+
+    .header__check--button{
+     
+      font-size: 9px;
+    }
+  }
