--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -32,6 +32,8 @@
   align-items: flex-end;
   font-weight: 500;
   font-size: 20px;
+  cursor: pointer;
+  list-style: none;
 }
 
 .links > :not(:first-child) {
