--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
   -moz-user-select: none;
@@ -14,91 +13,78 @@
   user-select: none;
   outline: none;
   scroll-behavior: smooth;
-
-  
 }
 
-
 .container {
-  padding-left: 6%; 
-  padding-right: 7%; 
+  padding-left: 6%;
+  padding-right: 7%;
   padding-bottom: 110px;
 }
 
-.heading-1{
-
+.heading-1 {
   font-size: 48px;
   font-weight: 500;
-
 }
 
-.heading-2{
+.heading-2 {
   font-size: 20px;
   font-weight: 500;
-  
 }
 
 .header {
-
   margin-bottom: 150px;
 }
 
+/*  */
 
+.modal-open {
+  overflow: hidden;
+}
 
+.modal-open .overlay {
+  display: block;
+}
 
 
 @media only screen and (max-width: 1000px) and (min-width: 900px) {
   .container {
-    padding-left: 7%; 
+    padding-left: 7%;
     padding-right: 3%;
   }
-
 }
 
 @media only screen and (max-width: 768px) {
-  .heading-1{
-
+  .heading-1 {
     font-size: 36px;
     font-weight: 500;
-  
   }
-
-
 }
 
-
-@media only screen and (max-width: 760px){
-
-  .header{
-    margin-bottom: 80px
+@media only screen and (max-width: 760px) {
+  .header {
+    margin-bottom: 80px;
   }
 
-  .container{
+  .container {
     padding-bottom: 70px;
-
   }
-  .heading-1{
+  .heading-1 {
     padding-bottom: 25px;
   }
-  
+  p {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+  p {
+    font-size: 14px;
+  }
+  .heading-1 {
+    font-size: 26px;
   }
 
-
-
-
-  @media only screen and (max-width: 470px) {
-    p{
-      font-size: 16px;
-
-    }
-    .heading-1{
-      font-size: 26px;
-    }
-
-    .container{
-      padding-bottom: 70px;
-  
-    }
-
+  .container {
+    padding-bottom: 70px;
   }
-
+}
